tests/invalid/Reference_Invalid_1.whiley
public export method test():
    (&int)[] x = [new 1]
    assume *x[0] == 1